centered and fixed the projects wrap

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -719,6 +719,7 @@ footer p{
     font-size: 1em;
     line-height: 1.6;
     color: #333;
+    text-align: justify;
 }
 
 .projects-list{
@@ -750,7 +751,7 @@ footer p{
 
 .project h3{
     grid-column: 1 / 3;
-    padding-inline: 10%;
+    padding-inline: 5%;
     font-size: 1.5em;
     color: #021f45;
 }
@@ -758,7 +759,6 @@ footer p{
 .project a,
 .project img{
     grid-column: 1;
-    padding-inline: 5%;
     height: 220px;
 }
 
@@ -775,6 +775,11 @@ footer p{
 */
 
 @media (max-width: 768px) {
+    .projects-info h2{
+        text-align: center;
+        font-size: 1.5em;
+    }
+
     .project{
         width: 90%;
         grid-template-columns: 1fr;
@@ -783,6 +788,12 @@ footer p{
 
     .project h3{
         text-align: center;
+    }
+
+    .project img,
+    .project p{
+        grid-column: 1;
+        padding-inline: none;
     }
 }
 
